--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "chukwudi udoka",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.236.1",
+    "aws-sdk": "^2.381.0",
     "dotenv": "^5.0.1",
-    "npm": "6.0.0"
+    "npm": "^6.5.0"
   },
   "engines": {
     "node": "8.11.1"
